remove artifacts, add proper pages

--- a/src/app.html
+++ b/src/app.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ro">
 	<head>
 		<meta charset="utf-8" />
 		<link rel="icon" href="/favicon.png" />
@@ -10,4 +10,5 @@
 	<body>
 		<div id="svelte">%svelte.body%</div>
 	</body>
+	<!-- google analytics script may be placed here -->
 </html>
