--- a/src/app.html
+++ b/src/app.html
@@ -6,9 +6,19 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 
 		%svelte.head%
+		<!-- Global site tag (gtag.js) - Google Analytics -->
+		<script async src="https://www.googletagmanager.com/gtag/js?id=G-R4MQQBLQ53"></script>
+		<script>
+			window.dataLayer = window.dataLayer || [];
+			function gtag() {
+				dataLayer.push(arguments);
+			}
+			gtag('js', new Date());
+
+			gtag('config', 'G-R4MQQBLQ53');
+		</script>
 	</head>
 	<body>
 		<div id="svelte">%svelte.body%</div>
 	</body>
-	<!-- google analytics script may be placed here -->
 </html>
