add authentication page, and many other improvements

--- a/src/app.html
+++ b/src/app.html
@@ -23,6 +23,12 @@
 			rel="stylesheet"
 			href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
 		/>
+		<!-- google sign in  -->
+		<script src="https://accounts.google.com/gsi/client" async defer></script>
+		<!-- <meta
+			name="google-signin-client_id"
+			content="544606774946-pjhe7mqeembpn2hbk43g7lfi28ni12qi.apps.googleusercontent.com"
+		/> -->
 	</head>
 	<body>
 		<div id="svelte">%svelte.body%</div>
